History
=======

0.1.1a1 - Unreleased
--------------------

- Attachment as optional setting.


0.1.0b4 - 2012-05-21
--------------------

- Changed layout.
- Added possibility for attachments.

0.1.0b3 - 2012-03-16
--------------------

- Update models to use Declarative for compatibility with Kotti >= 0.6.