@@ -1,0 +1,7 @@
+"""
+Evolution module. Numbered Python scripts in this directory update the
+named database schema to VERSION.
+"""
+NAME = 'kotti_contactform'
+VERSION = 0
+DEPENDS = []
